@@ -36,28 +36,38 @@ let arg_list name doc conv =
   Arg.(value & pos_all conv [] & doc)
 
 let no_opam =
-  mk_flag ["no-opam"] "Do not manage the OPAM configuration."
+  mk_flag ["no-opam"] "Do not manage the OPAM configuration.  This will result in dependent libraries not being automatically installed during the configuration phase."
 let xen =
   mk_flag ["xen"] "Generate a Xen unikernel. Do not use in conjunction with --unix."
 let unix =
-  mk_flag ["unix"] "Use Unix backend. Do not use in conjunction with --xen."
-let no_macosx = 
-  mk_flag ["no-macosx"] "On MacOSX, force use of the Unix backend instead of OSX-specific libraries (advanced use only)."
+  mk_flag ["unix"] "Use Unix backend. Do not use in conjunction with --xen.  On MacOS X, this will use platform-specific code to be generated.  To force pure Unix mode on MacOS X, set the $(b,-t) flag to $(i,macosx) instead."
+
+let target =
+  let doc = "Target platform to compile the unikernel for.  Valid values are: $(i,xen), $(i,unix), $(i,macosx).  There are short forms available via $(b,--xen) and $(b,--unix) as well." in
+  let e = Arg.enum [ "unix", `Unix; "macosx", `MacOSX; "xen", `Xen ] in
+  Arg.(value & opt (some e) None & info ["t";"target"] ~docv:"TARGET" ~doc)
 
 (* Select the operating mode from command line flags *)
-let mode unix xen no_macosx =
-  match xen,unix with
-  | true , true  -> failwith "Cannot specify --unix and --xen together."
-  | true , false -> `Xen
-  | false, _     -> begin
-     match Mirage_misc.uname_s (), no_macosx with
-     | Some "Darwin", false -> `MacOSX
-     | _ -> `Unix
+let mode unix xen target =
+  let default_unix = 
+    match Mirage_misc.uname_s () with
+    | Some "Darwin" -> `MacOSX
+    | _ -> `Unix
+  in
+  (** Specifying --target takes priority over other flags *)
+  match target with
+  | Some t -> t
+  | None -> begin
+    (** For legacy reasons, Unix maps to either Unix or MacOS X *)
+    match xen, unix with
+    | true , true  -> failwith "Cannot specify --unix and --xen together."
+    | true , false -> `Xen
+    | false, _ -> default_unix
   end
 
 let file =
   let doc = Arg.info ~docv:"FILE"
-    ~doc:"Configuration file for Mirage. If not specified, the current directory will be scanned.\
+    ~doc:"Configuration file for Mirage. If not specified, the current directory will be scanned. \
           If one file named $(b,config.ml) is found, that file will be used. If no files \
           or multiple configuration files are found, this will result in an error unless one \
           is explicitly specified on the command line." [] in
@@ -78,7 +88,7 @@ let configure =
       Mirage.set_mode (mode unix xen no_macosx);
       let t = Mirage.load file in
       `Ok (Mirage.configure t)) in
-  Term.(ret (pure configure $ unix $ xen $ no_macosx $ no_opam $ file)),
+  Term.(ret (pure configure $ unix $ xen $ target $ no_opam $ file)),
   term_info "configure" ~doc ~man
 
 (* BUILD *)
